# octadecimal.pro

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  alembic.ini  docker-compose.qdrant-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  quality.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: deferred-work.md  spec-ux-1-design-system-tokens.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/automator/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
docs/adr/: 001-async-first-architecture.md  002-mcp-compose-strategy.md  002-protocol-ports-over-abstract-classes.md  003-domain-pure-python.md  004-sqlite-dev-postgres-prod.md  005-masked-secrets-in-domain.md  006-m5-only-dev-strategy.md
docs/architecture/: ao-persona-examples.md  knowledge-policy.example.yaml  mcp-workspace.example.json  workspace-mvp.md
docs/planning/: README.md  phase-1-python-foundation.md  phase-10-mcp-tool-context.md  phase-11-secret-manager.md  phase-12-minimal-operator-demo.md  phase-13-portfolio-polish.md  phase-2-domain-governance.md  phase-3-application-use-cases.md  planning-conventions.md  (+32 more)
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
pipecat-translator/: .env.example  README.md  TEST_REPORT.md  pyproject.toml  run_pipeline.py  run_speech.py
pipecat-translator/scripts/: configure-audio-routing.sh  seed_rag.py  setup-system-audio.sh  sudo-need.sh
pipecat-translator/src/pipecat_translator/: audio_config.py  config.py  pipeline.py  poc.py  speech_pipeline.py  suggestion_processor.py
pipecat-translator/src/pipecat_translator/overlay/: display.py  processor.py
pipecat-translator/src/pipecat_translator/rag/: embedder.py  processor.py  seed_phrases.json  store.py
pipecat-translator/tests/: TEST_PLAN.md  run_all.sh
pipecat-translator/tests/e2e/: test_audio_pipeline.sh  test_overlay.sh  test_rag_search.sh
pipecat-translator/tests/integration/: test_pipeline.py  test_poc.py
pipecat-translator/tests/unit/: test_audio_config.py  test_config.py  test_rag.py
scripts/: demo.sh  embed-knowledge.py  install-calendar-sync-m1-launchd.sh  install-embed-knowledge-launchd.sh  install-knowledge-sync-m1-launchd.sh  install-m1-calendar-automation.sh  install-m1-security-audit-launchd.sh  install-m5-m1-smoke-cron.sh  install-pc-ubuntu-security-audit.sh  install-workspace-api-launchd.sh  install-workspace-api-m1-launchd.sh  m1-headless-server-setup.sh  octa  octa-bws-token-store.sh  octa-calendar-permission-bootstrap.sh  octa-calendar-sync-m1.sh  octa-e2e-server.sh  octa-knowledge-sync-dev.sh  octa-knowledge-sync-m1.sh  octa-m1-security-audit.sh  octa-m1-smoke-check.sh  octa-m1-smoke-daily.sh  octa-mcp-workspace.sh  octa-mvp-up.sh  octa-pc-ubuntu-security-audit.sh  octa-pc-ubuntu-sudo-audit-watch.sh  octa-qdrant-dev.sh  octa-workspace-api-dev.sh  octa-workspace-api-m1.sh  octa-workspace-env.sh  octa-workspace-open.sh  run-workspace-evals.py  seed_demo.py  seed_workspace_mvp.py
website/: README.md  index.html
(+156 files in other folders)
