[project]
name = "secure-agentic-ai-platform"
version = "0.1.0"
description = "Secure governance and observability platform for agentic AI workflows with RAG, HITL approvals, LLM evals and audit trails."
readme = "README.md"
authors = [
    { name = "piotradamczyk78", email = "piotr.k.adamczyk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "calctl>=0.1.1; sys_platform == 'darwin'",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langgraph>=1.2.5",
    "mcp>=1.27.2",
    "qdrant-client>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
]

[project.scripts]
secure-agentic-ai = "secure_agentic_ai:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "secure_agentic_ai"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    ".agents",
    ".claude",
    ".junie",
    "_bmad-output",
    "e2e/node_modules",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["calctl.*"]
ignore_missing_imports = true
