[project]
name = "pipecat-translator"
version = "0.1.0"
description = "Real-time speech-to-speech translation PL↔EN with context-aware suggestions"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai>=0.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "sounddevice>=0.5.5",
    "numpy>=2.4.6",
    "websockets>=16.0",
    "pyaudio>=0.2.14",
]

[project.scripts]
translate-poc = "pipecat_translator.poc:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
